--- a/blocks-styles/icons.styl
+++ b/blocks-styles/icons.styl
@@ -42,14 +42,6 @@
 .blx-icon-plus {
   background-color: $brand-01;
   mask: url('../svgs/icon-plus.svg') no-repeat 50% 50%;
-
-  &:hover {
-    background-color: $selection;
-  }
-
-  &:focus {
-    background-color: $selection;
-  }
 }
 
 .blx-icon-close {
