--- a/blocks-styles/variables-base-root.styl
+++ b/blocks-styles/variables-base-root.styl
@@ -1,6 +1,7 @@
 :root {
   --interactive: $interactive-hex;
   --interactive-hover: $interactive-hover-hex;
+  --interactive-active: $interactive-active-hex;
   --interactive-shadow: $interactive-shadow-hex;
   --interactive-shadow-hover: $interactive-shadow-hover-hex;
 
@@ -14,6 +15,7 @@
   --ui-05: $ui-05-hex;
   --ui-06: $ui-06-hex;
   --ui-07: $ui-07-hex;
+  --ui-08: $ui-08-hex;
 
   --text-01: $text-01-hex;
   --text-02: $text-02-hex;
@@ -23,5 +25,10 @@
   --warning: $warning-hex;
   --error: $error-hex;
   --selection: $selection-hex;
+  
+  --error: $error-hex;
+  --error-hover: $error-hover-hex;
+  --secondary-hover: $secondary-hover-hex;
+  --secondary-active: $secondary-active-hex;
 }
 
